# thx-rs

./: Cargo.toml  README.md
crates/thx-dsp/: Cargo.toml  README.md
crates/thx-dsp/src/: block.rs  buffer.rs  channel_mask.rs  common.rs  lib.rs  processors.rs  sample.rs  smooth.rs  spec.rs  utils.rs
crates/thx-dsp/src/block/: gain.rs  runtime.rs
crates/thx-dsp/src/common/: buffer.rs  channel_mask.rs  params.rs  processor.rs  sample.rs  testing.rs
crates/thx-dsp/src/common/params/: boolean.rs  float.rs  smoother.rs
crates/thx-dsp/src/processors/: gain.rs
crates/thx-dsp/tests/: bypass.rs  gain.rs
crates/thx-dsp/tests/utils/: runner.rs  signal.rs
