[package]
name = "thx-dsp"
description = "THX DSP framework and processors."
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bitflags = { version = "2.13", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
triple_buffer = "9"

[dev-dependencies]
assert_no_alloc = "1.1"
serde_json = "1"
